--- a/LittlePersonCPU/LittlePersonCPU.vbproj
+++ b/LittlePersonCPU/LittlePersonCPU.vbproj
@@ -97,6 +97,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Register.vb" />
+    <Compile Include="StorageLocation.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
