--- a/LittlePersonCPU/LittlePersonCPU.vbproj
+++ b/LittlePersonCPU/LittlePersonCPU.vbproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CPU.vb" />
+    <Compile Include="DataStorage.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
