--- a/LittlePersonCPU/LittlePersonCPU.vbproj
+++ b/LittlePersonCPU/LittlePersonCPU.vbproj
@@ -73,15 +73,23 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assembler.Designer.vb">
+      <DependentUpon>Assembler.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Assembler.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CPU.vb" />
+    <Compile Include="DataConverter.vb" />
     <Compile Include="DataStorage.vb" />
-    <Compile Include="Form1.vb">
+    <Compile Include="CPUInterface.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="CPUInterface.Designer.vb">
+      <DependentUpon>CPUInterface.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Instruction.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -98,11 +106,13 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Register.vb" />
-    <Compile Include="StorageLocation.vb" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="Assembler.resx">
+      <DependentUpon>Assembler.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CPUInterface.resx">
+      <DependentUpon>CPUInterface.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
